<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/befor"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:backgroundTint="@color/basic_Blue"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/ic_arrow_24" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="165dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/add_address"
                android:textColor="@color/basic_Blue"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:backgroundTint="@color/basic_orang"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/locone" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:layout_width="4.4dp"
                        android:layout_height="4.4dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/loc" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="49dp"
            android:text="@string/My_Cart"
            android:textColor="@color/basic_Blue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/styl_menu_cart"
            app:cardCornerRadius="30dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cartList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                     />

                <View
                    android:layout_width="380dp"
                    android:layout_height="2sp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="50dp"
                    android:background="#40FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="55dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/mark_pro"
                            android:text="@string/Total"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="215dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/mark_pro"
                            android:text="@string/totalnum"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="55dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/mark_pro"
                            android:text="@string/Delivery"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/delivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="215dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/mark_pro"
                            android:text="@string/Free"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="380dp"
                        android:layout_height="2sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="#40FFFFFF" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/butCheckout"
                    android:layout_width="326dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="27dp"
                    android:backgroundTint="@color/basic_orang"
                    app:cardCornerRadius="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Checkout"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>