<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="89dp"
            android:layout_height="111dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iphone" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro"
                android:text="@string/Galaxy_Note_Ultra"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/price_cat"
                android:textColor="@color/basic_orang"
                android:textSize="20sp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="26dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            app:cardCornerRadius="26dp"
            android:backgroundTint="@color/back">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="11dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus_remove"
                    />
                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <ImageView
                    android:layout_width="11dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delet"/>

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>